<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.magendanz.villanovamec.EditEntryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/novaGrey"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text Type"
                android:textColor="@color/novaOffWhite"
                android:textSize="@dimen/medium_text_size"
                android:paddingBottom="@dimen/medium_padding"
                android:id="@+id/settings_title_field"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/divider_height"
                android:background="@color/novaWhite"
                android:layout_marginBottom="@dimen/small_padding"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radio_group"
                android:saveEnabled="false">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add New"
                    android:textColor="@color/novaOffWhite"
                    android:id="@+id/add_radio"
                    android:onClick="showEntrySelect"
                    android:saveEnabled="false"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Edit Existing"
                    android:textColor="@color/novaOffWhite"
                    android:id="@+id/edit_radio"
                    android:onClick="showEntrySelect"
                    android:saveEnabled="false"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Delete Existing"
                    android:textColor="@color/novaOffWhite"
                    android:id="@+id/delete_radio"
                    android:onClick="showEntrySelect"
                    android:saveEnabled="false"/>
            </RadioGroup>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/divider_height"
                android:background="@color/novaWhite"
                android:alpha=".5"
                android:layout_margin="@dimen/small_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/select_section">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Select Entry"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:id="@+id/existing_entry_field"/>
                </RelativeLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/entry_fields_section">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Title"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/text_field"
                    android:hint="@string/title_hint_field"
                    android:id="@+id/name_field"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Time (APR 14 0700 to APR 14 0800)"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>

                <!-- TODO(magendanz) use DatePicker and TimePicker -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="text|textCapCharacters"
                        android:background="@drawable/text_field"
                        android:hint="MONTH"
                        android:id="@+id/from_month_entry"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="number"
                        android:background="@drawable/text_field"
                        android:hint="DAY"
                        android:id="@+id/from_day_entry"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:inputType="number"
                        android:background="@drawable/text_field"
                        android:hint="TIME"
                        android:id="@+id/from_time_entry"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text=" to "/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="text|textCapCharacters"
                        android:background="@drawable/text_field"
                        android:hint="MONTH"
                        android:id="@+id/to_month_entry"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="number"
                        android:background="@drawable/text_field"
                        android:hint="DAY"
                        android:id="@+id/to_day_entry"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:inputType="number"
                        android:background="@drawable/text_field"
                        android:hint="TIME"
                        android:id="@+id/to_time_entry"/>

                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Select Location"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:prompt="@string/location_hint_field"
                        android:id="@+id/location_field"/>
                </RelativeLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Description"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:background="@drawable/text_field"
                    android:hint="@string/description_hint_field"
                    android:id="@+id/description_field"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/location_fields_section">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Title"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords"
                    android:background="@drawable/text_field"
                    android:hint="@string/title_hint_field"
                    android:id="@+id/loc_title_field"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_padding"
                    android:text="Location (decimal latitude and longitude)"
                    android:textColor="@color/novaOffWhite"
                    android:textSize="@dimen/small_text_size"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal|numberSigned"
                        android:background="@drawable/text_field"
                        android:hint="Latitude"
                        android:id="@+id/lat_field"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  ,  "/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal|numberSigned"
                        android:background="@drawable/text_field"
                        android:hint="Longitude"
                        android:id="@+id/long_field"/>
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/novaWhite"
                    android:alpha=".5"
                    android:layout_margin="@dimen/small_padding"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Add"
                android:onClick="updateEntry"
                android:id="@+id/add_entry_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Edit"
                android:onClick="updateEntry"
                android:id="@+id/edit_entry_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Delete"
                android:onClick="deleteEntry"
                android:id="@+id/delete_entry_button"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
